infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: race-wars
  labels:
    name: race-wars
